--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -1,8 +1,8 @@
-@import 'vars';
-@import 'functions';
-@import 'mixins';
-@import 'vendor';
-@import 'breakpoints';
+@import 'libs/vars';
+@import 'libs/functions';
+@import 'libs/mixins';
+@import 'libs/vendor';
+@import 'libs/breakpoints';
 
 /*
 	Dimension by HTML5 UP
