--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -654,7 +654,7 @@ figcaption {
 
 		.image:before {
 			pointer-events: none;
-			background-image: url("overlay.png");
+			background-image: url("../../images/overlay.png");
 			background-color: inherit;
 			border-radius: 4px;
 			content: '';
@@ -1150,7 +1150,7 @@ figcaption {
 			-webkit-transition-delay: 0.75s;
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
-			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("overlay.png");
+			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
 			background-size: auto, 256px 256px;
 			background-position: center, center;
 			background-repeat: no-repeat, repeat;
@@ -1166,7 +1166,7 @@ figcaption {
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("web_background.jpg");
+			background-image: url("../../images/web_background.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
