--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -175,7 +175,7 @@ figcaption {
 	p {
 		margin: 0 0 2rem 0;
 	}
-		.highlighted {
+		p.highlighted {
 	    background-color: rgba(255,255,0,.5);
 		}
 
